# benchmark_HF

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: benchmark.py  prepare_dataset.py
