[project]
name = "benchmark-hf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.14.0",
    "huggingface-hub>=0.16.0",
    "matplotlib>=3.6.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=1.5.0",
    "requests>=2.28.0",
    "seaborn>=0.12.0",
    "tqdm>=4.64.0",
]
